// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmbedBlock no data 1`] = `
<MediaBlock
  blockProps={
    Object {
      "entity": Object {
        "getData": [Function],
      },
      "entityType": Object {},
    }
  }
  isLoading={true}
>
  <a
    className="EmbedBlock__link"
    rel="noopener noreferrer"
    target="_blank"
  />
  <button
    className="Tooltip__button"
    type="button"
  >
    Edit
  </button>
  <button
    className="Tooltip__button"
    type="button"
  >
    Remove
  </button>
</MediaBlock>
`;

exports[`EmbedBlock renders 1`] = `
<MediaBlock
  blockProps={
    Object {
      "entity": Object {
        "getData": [Function],
      },
      "entityType": Object {},
    }
  }
  isLoading={false}
  label="Test title"
  src="http://www.example.com/example.png"
>
  <a
    className="EmbedBlock__link"
    href="http://www.example.com/"
    rel="noopener noreferrer"
    target="_blank"
    title="http://www.example.com/"
  >
    Test title
  </a>
  <button
    className="Tooltip__button"
    type="button"
  >
    Edit
  </button>
  <button
    className="Tooltip__button"
    type="button"
  >
    Remove
  </button>
</MediaBlock>
`;
